--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import './constants/variables';
 
 .spinner-screen {
-  height: 50vh;
+  height: 40vh;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -50,24 +50,14 @@
     @media screen and (max-width:600px) {
       align-items: flex-start;
     }
-    /*
-       &.hidden {
-         display: none;
-       }
-
-    &.visible {
-      display: flex;
-    }
-  */
-
   }
 
   .modal-container {
-    //max-width: 619px;
     width: 619px;
     height: 425px;
     background: #FFFFFF;
     padding: 30px;
+    z-index: 10;
 
     @media screen and (max-width:600px) {
       padding: 0;
@@ -121,10 +111,12 @@
         width: auto;
         font-family: $default-font;
         font-size: 13px;
+        max-width: 40%;
 
         @media screen and (max-width:600px) {
           margin-top: 20px;
           margin-left: 6px;
+          max-width: 90%;
         }
 
         .comment {
@@ -167,6 +159,10 @@
         border-radius: 3px;
         padding: 8px 11px;
 
+        &:focus {
+          background: #f4faff;
+          outline-width: 0;
+        }
       }
 
       &__add-comm-btn {
@@ -179,7 +175,7 @@
 
         &:hover {
           cursor: pointer;
-          opacity: 0.7;
+          opacity: 0.9;
         }
       }
     }
